# puppet-ceph

./: .fixtures.yml  .gitignore  .gitreview  .nodeset.yml  .pdkignore  .prefabs.yml  .zuul.yaml  CONTRIBUTING.rst  Gemfile  Gemfile-rspec-system  Modulefile  Puppetfile  README.md  Rakefile  USECASES.md  bindep.txt  metadata.json  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
examples/: common.yaml  hiera.yaml
examples/nodes/: ceph0.yaml  ceph1.yaml  client.yaml  first.yaml  second.yaml
files/restapi/: ceph-rest-api@.service
lib/facter/: ceph_daemons.rb  ceph_version.rb
manifests/: cluster.pp  clusters.pp  conf.pp  fs.pp  init.pp  key.pp  keys.pp  mds.pp  mgr.pp  mirror.pp  mon.pp  mons.pp  osd.pp  osds.pp  params.pp  pool.pp  pools.pp  radosgw.pp  repo.pp  restapi.pp  rgw.pp
manifests/profile/: base.pp  client.pp  fs.pp  mds.pp  mgr.pp  mirror.pp  mon.pp  osd.pp  params.pp  rgw.pp
manifests/rgw/: apache.pp  apache24.pp  apache_fastcgi.pp  apache_proxy_fcgi.pp  barbican.pp  beast.pp  civetweb.pp  instance.pp  keystone.pp
manifests/role/: allinone.pp  base.pp  client.pp  mon.pp  osd.pp
releasenotes/notes/: add-ceph-mgr-support-d2a5e9104021f81a.yaml  add-luminous-centos-e038729331945b61.yaml  add-support-for-nautilus-6b4e7a5a23f3d269.yaml  add_mgr_caps-56dadf9202ce30b3.yaml  beast-d0eb1bcd637ca8ca.yaml  (+61 more)
spec/: spec_helper.rb  spec_helper_acceptance.rb  spec_helper_system.rb
templates/: ceph-radosgw.service.erb  radosgw.service.d.conf.erb
tests/: allinone.pp  client.pp  mon.pp  osd.pp
tools/: deploy_node.sh
(+121 files in other folders)
