[metadata]
name = puppet-ceph
summary = Puppet module for Ceph
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/puppet-openstack-guide/latest
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
