[metadata]
name = puppet-ceph
summary = Puppet module for Ceph
description_file =
    README.md
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/puppet-openstack-guide/latest
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
